# ICFPC2023

./: Cargo.toml
solution/climbing/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  17.json  2.json  20.json  21.json  22.json  24.json  25.json  28.json  29.json  3.json  30.json  31.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  43.json  45.json  47.json  48.json  50.json  52.json  53.json  54.json  55.json  56.json  57.json  58.json  59.json  (+21 more)
solution/climbing-2/: 10.json  11.json  12.json  13.json  14.json  15.json  16.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  30.json  36.json  37.json  38.json  39.json  4.json  41.json  42.json  44.json  45.json  47.json  48.json  49.json  50.json  53.json  54.json  57.json  64.json  65.json  69.json  70.json  75.json  76.json  82.json  83.json  (+3 more)
solution/greedy-optimized/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  26.json  27.json  28.json  (+65 more)
solution/greedy-optimized-diag/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  45.json  (+50 more)
src/: cache.rs  climbing.rs  common.rs  geometry.rs  greedy.rs  hungarian.rs  main.rs  placement.rs  score.rs  visualize.rs
(+985 files in other folders)
