[package]
name = "icfpc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.3.11", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
svg = "0.13.1"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
